[metadata]
name = kindplay
version = 0.0.2
description = Kind playground cli
long_description = file: README.md
author = Marcelo Silveira Vilar
author_email = tchelovilar@gmail.com
url = https://github.com/tchelovilar/kindplay
project_urls =
    Bug Tracker=https://github.com/tchelovilar/kindplay/issues
    Source Code=https://github.com/tchelovilar/kindplay
license = GPLv3+
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = kindplay

[options.entry_points]
console_scripts =
    kindplay = kindplay.cli:main
